# llm-actor

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: README.ru.md
examples/: 01_basic_generation.py  02_structured_output.py  03_tool_calling.py
src/llm_actor/: __init__.py  exceptions.py  logger.py  metrics.py  service.py  settings.py  tracing.py
src/llm_actor/actors/: pool.py  worker.py
src/llm_actor/client/: interface.py  llm.py  retry.py  tool_loop.py
src/llm_actor/client/adapters/: __init__.py  anthropic.py  gigachat.py  openai.py  openai_compatible.py
src/llm_actor/core/: messages.py  request.py  tools.py
src/llm_actor/resilience/: circuit_breaker.py
src/llm_broker/: __init__.py  exceptions.py  logger.py  metrics.py  service.py  settings.py
src/llm_broker/actors/: pool.py  worker.py
src/llm_broker/client/: interface.py  llm.py  retry.py
src/llm_broker/core/: messages.py
src/llm_broker/resilience/: circuit_breaker.py
tests/: conftest.py  dummy_llm_client.py  models.py  test_anthropic_adapter.py  test_llm_broker_ask.py  test_llm_broker_batch.py  test_llm_broker_interfaces.py  test_llm_broker_lifecycle.py  test_llm_broker_load.py  test_llm_broker_priority.py  test_llm_broker_resilience.py  test_llm_broker_retry.py  test_llm_broker_tool_adapters.py  test_llm_broker_tool_calling.py  test_llm_broker_validation.py  test_metrics.py  test_openai_adapter.py
tests/integration/: conftest.py  test_real_anthropic.py  test_real_gigachat.py  test_real_openai_compatible.py
tests/unit/: models.py  test_anthropic_adapter.py  test_dummy_llm_semantic_retry.py  test_gigachat_adapter.py  test_llm_broker_ask.py  test_llm_broker_batch.py  test_llm_broker_context_propagation.py  test_llm_broker_interfaces.py  test_llm_broker_lifecycle.py  test_llm_broker_load.py  test_llm_broker_priority.py  test_llm_broker_resilience.py  test_llm_broker_retry.py  test_llm_broker_tool_adapters.py  test_llm_broker_tool_calling.py  test_llm_broker_validation.py  test_logger.py  test_metrics.py  test_openai_adapter.py  test_openai_compatible_adapter.py  test_opentelemetry_tracing.py
