[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-actor"
version = "0.2.0"
description = "LLM actor: pool, circuit breaker, retries, metrics"
authors = [
    { name = "Sergey Arс", email = "sergey-vd@outlook.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pydantic~=2.9.2",
    "pydantic-settings~=2.5.2",
    "loguru>=0.7.0",
    "opentelemetry-api>=1.25.0",
]
keywords = ["llm", "actor", "concurrent", "parallel", "resilience", "circuit-breaker", "openai", "anthropic", "gigachat"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/SergeyArc/llm-actor"
Repository = "https://github.com/SergeyArc/llm-actor"
Issues = "https://github.com/SergeyArc/llm-actor/issues"

[project.optional-dependencies]
gigachat = ["gigachat"]
metrics = ["prometheus-client>=0.19.0"]
openai = ["openai"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.11.0",
    "prometheus-client>=0.19.0",
    "ruff>=0.6.0",
    "opentelemetry-sdk>=1.25.0",
    "openai>=2.30.0",
    "anthropic>=0.89.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_actor"]

[tool.hatch.build.targets.sdist]
include = ["src/llm_actor"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "C90",
    "N",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
files = ["src"]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
strict_equality = true
show_error_codes = true
disallow_any_unimported = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "anthropic"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openai"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "gigachat"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "gigachat.models"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
